# helios

./: .gitignore  Cargo.toml  README.md
btree/: Cargo.toml
btree/src/: lib.rs  page.rs  pager.rs
btree/tests/: btree.rs  checkpoint.rs  flush.rs  full_snapshot.rs  persistence.rs
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/architecture/: overview.md
docs/src/usage/: repl.md
execution/src/: evaluator.rs  helpers.rs  materialized.rs  stream.rs
execution/src/aggregation/: scalar_aggregate.rs
expr/src/: lib.rs  schema.rs
expr/src/logical_plan/: mod.rs
optimizer/src/: aggregate_elimination.rs  aggregate_merge.rs  aggregate_pushdown.rs  common_subexpr_elimination.rs  constant_propagation.rs  cost_model.rs  decorrelation.rs  distinct_to_aggregate.rs  join_commutation.rs  join_elimination.rs  lib.rs  limit_pushdown.rs  null_propagation.rs  propagate_empty_relation.rs  scalar_subquery_flattening.rs  single_distinct_to_groupby.rs  subquery_to_join.rs  type_coercion.rs  union_merge.rs  unwrap_cast_in_comparison.rs
repl/: Cargo.toml
repl/src/: main.rs  pretty_print.rs
row/src/: codec.rs  types.rs
sql-parser/src/: lib.rs
storage/src/: catalog.rs  engine.rs  lib.rs  materializer.rs  read.rs  table.rs
