[package]
name = "repl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "helios"
path = "src/main.rs"

[dependencies]
expr = { path = "../expr" }
optimizer = { path = "../optimizer" }
physical-plan = { path = "../physical-plan" }
execution = { path = "../execution" }
storage = { path = "../storage" }
sql-parser = { path = "../sql-parser" }
rustyline = "15"
colored = "2"
